stderr
Hiker.java:10: error: cannot find symbol
        if(Arrays.equals(hand, aaa)){
                               ^
  symbol:   variable aaa
  location: class Hiker
1 error
